fixed footer link spacing

--- a/src/components/container.module.css
+++ b/src/components/container.module.css
@@ -25,7 +25,6 @@
 
 
 p {
-    text-align: justify;
     line-height: 1.4rem;
     padding-bottom: .75rem;
 }
